// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> Should renders search bar and data with arists and albums 1`] = `
<div
  className="container"
>
  <form
    className="searchForm"
    onSubmit={[Function]}
  >
    <input
      className="searchForm__input"
      onChange={[Function]}
      placeholder="Search for an artist or album..."
      type="text"
      value=""
    />
    <button
      className="searchForm__submit"
      title="submitBTN"
      type="submit"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </form>
  <div
    className="data-container"
  >
    <div
      className="dataSection"
      title="dataSection"
    >
      <h2
        className="dataSection__title"
      />
      <ul
        className="dataSection__list"
      >
        <li
          className="album"
          onClick={[Function]}
          title="album"
        >
          <div
            className="album__art"
          >
            <img
              alt="album artwork"
            />
          </div>
          <h3
            className="album__title"
          >
            Guztav & Siëma
             - 
          </h3>
        </li>
        <li
          className="album"
          onClick={[Function]}
          title="album"
        >
          <div
            className="album__art"
          >
            <img
              alt="album artwork"
            />
          </div>
          <h3
            className="album__title"
          >
            Guztav & Siëmdasa
             - 
          </h3>
        </li>
      </ul>
    </div>
    <div
      className="dataSection"
      title="dataSection"
    >
      <h2
        className="dataSection__title"
      >
        artists
      </h2>
      <ul
        className="dataSection__list"
      >
        <li
          className="artist"
          title="artist"
        >
          <h3
            className="artist__name"
          >
            <span
              className="artist__name--main"
            >
              Guztav & Siëma
            </span>
            <span
              className="artist__name--secondary"
            >
              Dance
            </span>
          </h3>
        </li>
        <li
          className="artist"
          title="artist"
        >
          <h3
            className="artist__name"
          >
            <span
              className="artist__name--main"
            >
              Guztav & Siëmdasa
            </span>
            <span
              className="artist__name--secondary"
            >
              Dance123
            </span>
          </h3>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<App /> Should renders search bar and data with only albums 1`] = `
<div
  className="container"
>
  <form
    className="searchForm"
    onSubmit={[Function]}
  >
    <input
      className="searchForm__input"
      onChange={[Function]}
      placeholder="Search for an artist or album..."
      type="text"
      value=""
    />
    <button
      className="searchForm__submit"
      title="submitBTN"
      type="submit"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </form>
  <div
    className="data-container"
  >
    <div
      className="dataSection"
      title="dataSection"
    >
      <h2
        className="dataSection__title"
      />
      <ul
        className="dataSection__list"
      >
        <li
          className="album"
          onClick={[Function]}
          title="album"
        >
          <div
            className="album__art"
          >
            <img
              alt="album artwork"
              src="https://is4-ssl.mzstatic.com/image/thumb/Music123/v4/01/29/19/0129190f-1a37-fb80-0518-97261962beb5/source/100x100bb.jpg"
            />
          </div>
          <h3
            className="album__title"
          >
            frytt
             - 
            Siema - Single
          </h3>
        </li>
        <li
          className="album"
          onClick={[Function]}
          title="album"
        >
          <div
            className="album__art"
          >
            <img
              alt="album artwork"
              src="https://is4-ssl.mzstatic.com/image/thumb/Music123/v4/01/29/19/0129190f-1a37-fb80-0518-97261962beb5/source/100x100bb.jpg"
            />
          </div>
          <h3
            className="album__title"
          >
            frytt123
             - 
            Siema - Single123
          </h3>
        </li>
      </ul>
    </div>
    <div
      className="dataSection"
      title="dataSection"
    >
      <h2
        className="dataSection__title"
      >
        artists
      </h2>
      <ul
        className="dataSection__list"
      />
    </div>
  </div>
</div>
`;

exports[`<App /> Should renders search bar and data with only artists 1`] = `
<div
  className="container"
>
  <form
    className="searchForm"
    onSubmit={[Function]}
  >
    <input
      className="searchForm__input"
      onChange={[Function]}
      placeholder="Search for an artist or album..."
      type="text"
      value=""
    />
    <button
      className="searchForm__submit"
      title="submitBTN"
      type="submit"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </form>
  <div
    className="data-container"
  >
    <div
      className="dataSection"
      title="dataSection"
    >
      <h2
        className="dataSection__title"
      />
      <ul
        className="dataSection__list"
      />
    </div>
    <div
      className="dataSection"
      title="dataSection"
    >
      <h2
        className="dataSection__title"
      >
        artists
      </h2>
      <ul
        className="dataSection__list"
      >
        <li
          className="artist"
          title="artist"
        >
          <h3
            className="artist__name"
          >
            <span
              className="artist__name--main"
            >
              Guztav & Siëma
            </span>
            <span
              className="artist__name--secondary"
            >
              Dance
            </span>
          </h3>
        </li>
        <li
          className="artist"
          title="artist"
        >
          <h3
            className="artist__name"
          >
            <span
              className="artist__name--main"
            >
              Guztav & Siëmdasa
            </span>
            <span
              className="artist__name--secondary"
            >
              Dance123
            </span>
          </h3>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<App /> Should renders search bar correctly with initialState 1`] = `
<div
  className="container"
>
  <form
    className="searchForm"
    onSubmit={[Function]}
  >
    <input
      className="searchForm__input"
      onChange={[Function]}
      placeholder="Search for an artist or album..."
      type="text"
      value=""
    />
    <button
      className="searchForm__submit"
      title="submitBTN"
      type="submit"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </form>
</div>
`;
